[gd_scene load_steps=14 format=3 uid="uid://bj5sqvpo82wss"]

[ext_resource type="Texture2D" uid="uid://bo6u53p7h48lm" path="res://textures/panelInset_beige.png" id="1_ip1nb"]
[ext_resource type="Script" path="res://bulletins/player_menus.gd" id="1_jc7kn"]
[ext_resource type="Texture2D" uid="uid://ce7elfqa2a45y" path="res://textures/cross.png" id="2_820qy"]
[ext_resource type="PackedScene" uid="uid://bihchgc53k323" path="res://ui/custom_nodes/inventory_slot.tscn" id="2_dkcxg"]
[ext_resource type="Texture2D" uid="uid://kdaxobu0yfhw" path="res://textures/panelInset_brown.png" id="3_4grpx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dv5f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6veyu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87ccs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b830n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_duy7p"]

[sub_resource type="InputEventKey" id="InputEventKey_s4ouu"]
device = -1
keycode = 4194306

[sub_resource type="InputEventKey" id="InputEventKey_1x1qn"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_dq4gu"]
events = [SubResource("InputEventKey_s4ouu"), SubResource("InputEventKey_1x1qn")]

[node name="PlayerMenuBase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jc7kn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 64
split_offset = 600
dragger_visibility = 1

[node name="InventoryNinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VSplitContainer"]
layout_mode = 2
texture = ExtResource("1_ip1nb")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 48
patch_margin_bottom = 32

[node name="InventoryContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -104.0
offset_right = 188.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 7

[node name="InventorySlot" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot2" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot3" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot4" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot5" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot6" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot7" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot8" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot9" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot10" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot11" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot12" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot13" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot14" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot15" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot16" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot17" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot18" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot19" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot20" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot21" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot22" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot23" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot24" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot25" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot26" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot27" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="InventorySlot28" parent="MarginContainer/HBoxContainer/VSplitContainer/InventoryNinePatchRect/InventoryContainer" instance=ExtResource("2_dkcxg")]
layout_mode = 2

[node name="DescriptionNinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VSplitContainer"]
layout_mode = 2
texture = ExtResource("1_ip1nb")
patch_margin_left = 32
patch_margin_top = 92
patch_margin_right = 48
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VSplitContainer/DescriptionNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VSplitContainer/DescriptionNinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/VSplitContainer/DescriptionNinePatchRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="ItemExtraInfoLabel" type="Label" parent="MarginContainer/HBoxContainer/VSplitContainer/DescriptionNinePatchRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_6dv5f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6veyu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_87ccs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b830n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_duy7p")
shortcut = SubResource("Shortcut_dq4gu")
icon = ExtResource("2_820qy")
expand_icon = true

[node name="UtilityNinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_ip1nb")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 48
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3_4grpx")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 32
patch_margin_bottom = 16

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/UtilityNinePatchRect/MarginContainer/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Crafting"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/CloseButton" to="." method="close"]
